[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Tilesets/terrain_.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Objects/World/End.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Objects/ControlsUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Objects/World/Checkpoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Objects/Cube.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Camera.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Worlds/Tuto2.gd" type="Script" id=8]
[ext_resource path="res://Assets/Tilesets/spikes.tres" type="TileSet" id=9]
[ext_resource path="res://Assets/Tilesets/background_.tres" type="TileSet" id=10]
[ext_resource path="res://Assets/Tilesets/overlay_.tres" type="TileSet" id=11]
[ext_resource path="res://Assets/Tilesets/anti_control.tres" type="TileSet" id=12]
[ext_resource path="res://Scenes/CameraZone.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/CameraSystem.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Sprites/backgrounds/World1/background_ground.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/backgrounds/World1/background_sky.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/backgrounds/World1/background_underground.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/grid_sprite.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 48 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 24 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 24 )

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 2

[node name="World" type="Node2D"]
script = ExtResource( 8 )
level_id = 1
next_level = "res://Scenes/Worlds/World1_Level1.tscn"

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Sounds" type="Node" parent="."]

[node name="Triggers" type="Node" parent="."]

[node name="ShowHandTutorial" type="Area2D" parent="Triggers"]
position = Vector2( 376, 336 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/ShowHandTutorial"]
shape = SubResource( 1 )

[node name="RetrieveHandTutorial" type="Area2D" parent="Triggers"]
position = Vector2( 456, 312 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/RetrieveHandTutorial"]
shape = SubResource( 2 )

[node name="CameraSystem" parent="." instance=ExtResource( 14 )]
Target_Path = NodePath("../Player")

[node name="Camera" parent="CameraSystem" instance=ExtResource( 7 )]
position = Vector2( 152, 360 )

[node name="CameraZone" parent="CameraSystem" instance=ExtResource( 13 )]
position = Vector2( 152, 360 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraSystem/CameraZone"]
position = Vector2( -8, -144 )
shape = SubResource( 3 )

[node name="CameraZone2" parent="CameraSystem" instance=ExtResource( 13 )]
position = Vector2( 240, 392 )
free_x = true
free_y = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CameraSystem/CameraZone2"]
shape = SubResource( 4 )

[node name="GridLimits" type="ReferenceRect" parent="."]
margin_right = 640.0
margin_bottom = 448.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TextureRect" parent="GridLimits"]
light_mask = 2
material = SubResource( 5 )
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 18 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLayer" type="ParallaxBackground" parent="."]

[node name="Background0" type="ParallaxLayer" parent="BackgroundLayer"]
motion_scale = Vector2( 0, 0 )

[node name="ColorRect" type="ColorRect" parent="BackgroundLayer/Background0"]
margin_left = -160.0
margin_top = -96.0
margin_right = 160.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BackgroundLayer/Background0"]
margin_left = -160.0
margin_top = -128.0
margin_right = 160.0
margin_bottom = 128.0
texture = ExtResource( 16 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube" parent="BackgroundLayer/Background0" instance=ExtResource( 6 )]
position = Vector2( 0, -24 )

[node name="Background1" type="ParallaxLayer" parent="BackgroundLayer"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Ground" type="TextureRect" parent="BackgroundLayer/Background1"]
margin_left = -96.0
margin_top = -96.0
margin_right = 736.0
margin_bottom = 160.0
texture = ExtResource( 15 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Underground" type="TextureRect" parent="BackgroundLayer/Background1"]
margin_left = -96.0
margin_top = 160.0
margin_right = 736.0
margin_bottom = 416.0
texture = ExtResource( 17 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ParallaxLayer" parent="BackgroundLayer"]

[node name="CanvasModulate" type="CanvasModulate" parent="BackgroundLayer"]
color = Color( 0.988235, 0.831373, 0.831373, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, -144 )

[node name="Tilemaps" type="Node2D" parent="."]

[node name="BackgroundTileMap" type="TileMap" parent="Tilemaps"]
z_index = -1
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AntiControlTileMap" type="TileMap" parent="Tilemaps"]
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 0
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TerrainTileMap" type="TileMap" parent="Tilemaps"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65538, 0, 8, -65537, 0, 9, -131072, 0, 9, -131071, 0, 9, -131070, 0, 9, -131069, 0, 9, -131068, 0, 9, -131067, 0, 9, -131066, 0, 9, -131065, 0, 9, -131064, 0, 9, -131063, 0, 9, -131062, 0, 9, -131061, 0, 9, -131060, 0, 9, -131059, 0, 9, -131058, 0, 9, -131057, 0, 9, -131056, 0, 9, -131055, 0, 9, -131054, 0, 9, -131053, 0, 6, -131052, 0, 196610, -131051, 0, 196610, -131050, 0, 196610, -131049, 0, 196610, -131048, 0, 196610, -131047, 0, 196610, -131046, 0, 196610, -131045, 0, 196610, -131044, 0, 196610, -131043, 0, 196610, -131042, 0, 196610, -131041, 0, 5, -131040, 0, 9, -131039, 0, 9, -131038, 0, 9, -131037, 0, 9, -131036, 0, 9, -131035, 0, 9, -131034, 0, 9, -131033, 0, 9, -131032, 0, 9, -131031, 0, 11, -2, 0, 131080, -1, 0, 131082, -65536, 0, 131082, -65535, 0, 131082, -65534, 0, 131082, -65533, 0, 131082, -65532, 0, 131082, -65531, 0, 131082, -65530, 0, 131082, -65529, 0, 131082, -65528, 0, 131082, -65527, 0, 131082, -65526, 0, 131082, -65525, 0, 131082, -65524, 0, 131082, -65523, 0, 131082, -65522, 0, 131082, -65521, 0, 131082, -65520, 0, 131082, -65519, 0, 131082, -65518, 0, 131082, -65517, 0, 65547, -65505, 0, 131080, -65504, 0, 131082, -65503, 0, 131082, -65502, 0, 131082, -65501, 0, 131082, -65500, 0, 131082, -65499, 0, 131082, -65498, 0, 131082, -65497, 0, 131082, -65496, 0, 131082, -65495, 0, 65547, 65534, 0, 131080, 65535, 0, 131082, 0, 0, 131082, 1, 0, 131082, 2, 0, 131082, 3, 0, 131082, 4, 0, 131082, 5, 0, 131082, 6, 0, 131082, 7, 0, 131078, 8, 0, 196618, 9, 0, 131077, 10, 0, 131078, 11, 0, 196618, 12, 0, 131077, 13, 0, 131082, 14, 0, 131082, 15, 0, 131082, 16, 0, 131082, 17, 0, 131082, 18, 0, 131078, 19, 0, 196619, 31, 0, 131080, 32, 0, 131082, 33, 0, 131082, 34, 0, 131082, 35, 0, 131082, 36, 0, 131082, 37, 0, 131082, 38, 0, 131082, 39, 0, 131082, 40, 0, 131082, 41, 0, 65547, 131070, 0, 131080, 131071, 0, 131082, 65536, 0, 131082, 65537, 0, 131082, 65538, 0, 131078, 65539, 0, 196618, 65540, 0, 131077, 65541, 0, 131078, 65542, 0, 196618, 65543, 0, 131079, 65545, 0, 196616, 65546, 0, 131079, 65548, 0, 131080, 65549, 0, 131082, 65550, 0, 131082, 65551, 0, 131082, 65552, 0, 131082, 65553, 0, 131082, 65554, 0, 65547, 65567, 0, 131080, 65568, 0, 131082, 65569, 0, 131082, 65570, 0, 131082, 65571, 0, 131082, 65572, 0, 131082, 65573, 0, 131082, 65574, 0, 131082, 65575, 0, 131082, 65576, 0, 131082, 65577, 0, 65547, 196606, 0, 131080, 196607, 0, 131082, 131072, 0, 131082, 131073, 0, 131082, 131074, 0, 65547, 131076, 0, 196616, 131077, 0, 131079, 131079, 0, 65536, 131082, 0, 131072, 131084, 0, 131076, 131085, 0, 196618, 131086, 0, 131077, 131087, 0, 131082, 131088, 0, 131082, 131089, 0, 131082, 131090, 0, 65547, 131103, 0, 131080, 131104, 0, 131082, 131105, 0, 131082, 131106, 0, 131082, 131107, 0, 131082, 131108, 0, 131082, 131109, 0, 131082, 131110, 0, 131082, 131111, 0, 131082, 131112, 0, 131082, 131113, 0, 65547, 262142, 0, 131080, 262143, 0, 131082, 196608, 0, 131082, 196609, 0, 131078, 196610, 0, 196619, 196613, 0, 131072, 196615, 0, 65536, 196620, 0, 131072, 196622, 0, 196616, 196623, 0, 131077, 196624, 0, 131082, 196625, 0, 131082, 196626, 0, 65547, 196639, 0, 196616, 196640, 0, 131077, 196641, 0, 131082, 196642, 0, 131082, 196643, 0, 131082, 196644, 0, 131082, 196645, 0, 131082, 196646, 0, 131082, 196647, 0, 131082, 196648, 0, 131082, 196649, 0, 65547, 327678, 0, 131080, 327679, 0, 131082, 262144, 0, 131078, 262145, 0, 196619, 262151, 0, 131072, 262159, 0, 131080, 262160, 0, 131082, 262161, 0, 131082, 262162, 0, 65547, 262176, 0, 131080, 262177, 0, 131082, 262178, 0, 131082, 262179, 0, 131082, 262180, 0, 131082, 262181, 0, 131082, 262182, 0, 131082, 262183, 0, 131082, 262184, 0, 131082, 262185, 0, 65547, 393214, 0, 131080, 393215, 0, 131082, 327680, 0, 65547, 327695, 0, 131080, 327696, 0, 131082, 327697, 0, 131082, 327698, 0, 65547, 327712, 0, 131080, 327713, 0, 131082, 327714, 0, 131082, 327715, 0, 131082, 327716, 0, 131082, 327717, 0, 131082, 327718, 0, 131082, 327719, 0, 131082, 327720, 0, 131082, 327721, 0, 65547, 458750, 0, 131080, 458751, 0, 131082, 393216, 0, 65547, 393231, 0, 196616, 393232, 0, 131077, 393233, 0, 131078, 393234, 0, 196619, 393248, 0, 196616, 393249, 0, 131077, 393250, 0, 131082, 393251, 0, 131082, 393252, 0, 131082, 393253, 0, 131082, 393254, 0, 131082, 393255, 0, 131082, 393256, 0, 131082, 393257, 0, 65547, 524286, 0, 131080, 524287, 0, 131082, 458752, 0, 65547, 458768, 0, 196616, 458769, 0, 196619, 458785, 0, 131080, 458786, 0, 131082, 458787, 0, 131082, 458788, 0, 131082, 458789, 0, 131082, 458790, 0, 131082, 458791, 0, 131082, 458792, 0, 131082, 458793, 0, 65547, 589822, 0, 131080, 589823, 0, 131082, 524288, 0, 65547, 524321, 0, 131076, 524322, 0, 196618, 524323, 0, 131077, 524324, 0, 131082, 524325, 0, 131082, 524326, 0, 131082, 524327, 0, 131082, 524328, 0, 131082, 524329, 0, 65547, 655358, 0, 131080, 655359, 0, 131082, 589824, 0, 65547, 589839, 0, 8, 589840, 0, 9, 589841, 0, 9, 589842, 0, 9, 589843, 0, 9, 589844, 0, 9, 589845, 0, 9, 589846, 0, 9, 589847, 0, 9, 589848, 0, 9, 589849, 0, 9, 589850, 0, 11, 589855, 10, 65537, 589856, 10, 1, 589857, 0, 65536, 589858, 10, 65536, 589859, 0, 131080, 589860, 0, 131078, 589861, 0, 196618, 589862, 0, 131077, 589863, 0, 131082, 589864, 0, 131082, 589865, 0, 65547, 720894, 0, 131080, 720895, 0, 131082, 655360, 0, 65542, 655361, 0, 11, 655375, 0, 131080, 655376, 0, 131082, 655377, 0, 131082, 655378, 0, 131082, 655379, 0, 131082, 655380, 0, 131082, 655381, 0, 131082, 655382, 0, 131082, 655383, 0, 131082, 655384, 0, 131082, 655385, 0, 131078, 655386, 0, 196619, 655393, 0, 131072, 655395, 0, 131076, 655396, 0, 196619, 655398, 0, 196616, 655399, 0, 131077, 655400, 0, 131082, 655401, 0, 65547, 786430, 0, 131080, 786431, 0, 131082, 720896, 0, 131082, 720897, 0, 65542, 720898, 0, 9, 720899, 0, 9, 720900, 0, 9, 720901, 0, 11, 720904, 0, 196609, 720905, 0, 196611, 720906, 10, 0, 720907, 10, 1, 720908, 0, 8, 720909, 0, 9, 720910, 0, 9, 720911, 0, 65541, 720912, 0, 131082, 720913, 0, 131082, 720914, 0, 131082, 720915, 0, 131082, 720916, 0, 131082, 720917, 0, 131082, 720918, 0, 131082, 720919, 0, 131082, 720920, 0, 131082, 720921, 0, 65547, 720931, 0, 131072, 720935, 0, 131080, 720936, 0, 131082, 720937, 0, 65547, 851966, 0, 131080, 851967, 0, 131082, 786432, 0, 131082, 786433, 0, 131082, 786434, 0, 131082, 786435, 0, 131082, 786436, 0, 131082, 786437, 0, 65547, 786444, 0, 131080, 786445, 0, 131082, 786446, 0, 131082, 786447, 0, 131082, 786448, 0, 131082, 786449, 0, 131082, 786450, 0, 131082, 786451, 0, 131082, 786452, 0, 131082, 786453, 0, 131082, 786454, 0, 131082, 786455, 0, 131082, 786456, 0, 131082, 786457, 0, 65547, 786471, 0, 131080, 786472, 0, 131082, 786473, 0, 65547, 917502, 0, 131080, 917503, 0, 131082, 851968, 0, 131082, 851969, 0, 131082, 851970, 0, 131082, 851971, 0, 131082, 851972, 0, 131082, 851973, 0, 65547, 851980, 0, 131080, 851981, 0, 131082, 851982, 0, 131082, 851983, 0, 131082, 851984, 0, 131082, 851985, 0, 131082, 851986, 0, 131082, 851987, 0, 131082, 851988, 0, 131082, 851989, 0, 131082, 851990, 0, 131082, 851991, 0, 131082, 851992, 0, 131082, 851993, 0, 65542, 851994, 0, 9, 851995, 0, 9, 851996, 0, 11, 852007, 0, 131080, 852008, 0, 131082, 852009, 0, 65547, 983038, 0, 131080, 983039, 0, 131082, 917504, 0, 131082, 917505, 0, 131082, 917506, 0, 131082, 917507, 0, 131082, 917508, 0, 131078, 917509, 0, 196619, 917516, 0, 196616, 917517, 0, 131077, 917518, 0, 131082, 917519, 0, 131082, 917520, 0, 131082, 917521, 0, 131082, 917522, 0, 131082, 917523, 0, 131082, 917524, 0, 131082, 917525, 0, 131082, 917526, 0, 131082, 917527, 0, 131082, 917528, 0, 131082, 917529, 0, 131082, 917530, 0, 131082, 917531, 0, 131082, 917532, 0, 65547, 917543, 0, 131080, 917544, 0, 131082, 917545, 0, 65547, 1048574, 0, 131080, 1048575, 0, 131082, 983040, 0, 131082, 983041, 0, 131082, 983042, 0, 131082, 983043, 0, 131082, 983044, 0, 65547, 983053, 0, 131080, 983054, 0, 131082, 983055, 0, 131082, 983056, 0, 131082, 983057, 0, 131082, 983058, 0, 131082, 983059, 0, 131082, 983060, 0, 131082, 983061, 0, 131082, 983062, 0, 131082, 983063, 0, 131082, 983064, 0, 131082, 983065, 0, 131082, 983066, 0, 131082, 983067, 0, 131082, 983068, 0, 65542, 983069, 0, 9, 983070, 0, 9, 983071, 0, 9, 983072, 0, 9, 983073, 0, 9, 983074, 0, 11, 983075, 10, 0, 983076, 10, 65537, 983078, 4, 0, 983079, 0, 131080, 983080, 0, 131082, 983081, 0, 65547, 1114110, 0, 131080, 1114111, 0, 131082, 1048576, 0, 131082, 1048577, 0, 131082, 1048578, 0, 131082, 1048579, 0, 131082, 1048580, 0, 65547, 1048589, 0, 131080, 1048590, 0, 131082, 1048591, 0, 131082, 1048592, 0, 131082, 1048593, 0, 131082, 1048594, 0, 131082, 1048595, 0, 131082, 1048596, 0, 131082, 1048597, 0, 131082, 1048598, 0, 131082, 1048599, 0, 131082, 1048600, 0, 131082, 1048601, 0, 131082, 1048602, 0, 131082, 1048603, 0, 131082, 1048604, 0, 131082, 1048605, 0, 131082, 1048606, 0, 131082, 1048607, 0, 131082, 1048608, 0, 131082, 1048609, 0, 131078, 1048610, 0, 196619, 1048615, 0, 131080, 1048616, 0, 131082, 1048617, 0, 65547, 1179646, 0, 131080, 1179647, 0, 131082, 1114112, 0, 131082, 1114113, 0, 131082, 1114114, 0, 131082, 1114115, 0, 131082, 1114116, 0, 65547, 1114125, 0, 131080, 1114126, 0, 131082, 1114127, 0, 131082, 1114128, 0, 131082, 1114129, 0, 131082, 1114130, 0, 131082, 1114131, 0, 131082, 1114132, 0, 131082, 1114133, 0, 131082, 1114134, 0, 131078, 1114135, 0, 196618, 1114136, 0, 196618, 1114137, 0, 196618, 1114138, 0, 196618, 1114139, 0, 196618, 1114140, 0, 196618, 1114141, 0, 131077, 1114142, 0, 131082, 1114143, 0, 131082, 1114144, 0, 131078, 1114145, 0, 196619, 1114151, 0, 131080, 1114152, 0, 131082, 1114153, 0, 65547, 1245182, 0, 131080, 1245183, 0, 131082, 1179648, 0, 131082, 1179649, 0, 131082, 1179650, 0, 131082, 1179651, 0, 131078, 1179652, 0, 196619, 1179661, 0, 196616, 1179662, 0, 131077, 1179663, 0, 131082, 1179664, 0, 131082, 1179665, 0, 131082, 1179666, 0, 131082, 1179667, 0, 131082, 1179668, 0, 131082, 1179669, 0, 131078, 1179670, 0, 196619, 1179677, 0, 196616, 1179678, 0, 131077, 1179679, 0, 131078, 1179680, 0, 196619, 1179684, 10, 1, 1179685, 3, 8, 1179686, 3, 9, 1179687, 3, 9, 1179688, 3, 9, 1179689, 3, 11, 1310718, 0, 131080, 1310719, 0, 131082, 1245184, 0, 131082, 1245185, 0, 131082, 1245186, 0, 131078, 1245187, 0, 196619, 1245198, 0, 196616, 1245199, 0, 131077, 1245200, 0, 131082, 1245201, 0, 131082, 1245202, 0, 131078, 1245203, 0, 196618, 1245204, 0, 196617, 1245205, 0, 196619, 1245214, 0, 196616, 1245215, 0, 196619, 1245221, 3, 196616, 1245222, 3, 196618, 1245223, 3, 196618, 1245224, 3, 196618, 1245225, 3, 196619, 1376254, 0, 131080, 1376255, 0, 131082, 1310720, 0, 131082, 1310721, 0, 131082, 1310722, 0, 65547, 1310735, 0, 131080, 1310736, 0, 131082, 1310737, 0, 131082, 1310738, 0, 65547, 1310740, 0, 131072, 1310758, 0, 131080, 1310759, 0, 131082, 1310760, 0, 131082, 1310761, 0, 65547, 1441790, 0, 131080, 1441791, 0, 131082, 1376256, 0, 131082, 1376257, 0, 131082, 1376258, 0, 65547, 1376271, 0, 131076, 1376272, 0, 196618, 1376273, 0, 131077, 1376274, 0, 65547, 1376282, 10, 65537, 1376283, 10, 1, 1376284, 0, 8, 1376285, 0, 9, 1376286, 0, 9, 1376287, 0, 9, 1376288, 0, 9, 1376289, 3, 8, 1376290, 3, 11, 1376294, 0, 131080, 1376295, 0, 131082, 1376296, 0, 131082, 1376297, 0, 65547, 1507326, 0, 131080, 1507327, 0, 131082, 1441792, 0, 131082, 1441793, 0, 131082, 1441794, 0, 65547, 1441807, 0, 131072, 1441809, 0, 131076, 1441810, 0, 196619, 1441820, 0, 131080, 1441821, 0, 131082, 1441822, 0, 131082, 1441823, 0, 131082, 1441824, 0, 131082, 1441825, 3, 131080, 1441826, 3, 65547, 1441830, 0, 131080, 1441831, 0, 131082, 1441832, 0, 131082, 1441833, 0, 65547, 1572862, 0, 131080, 1572863, 0, 131082, 1507328, 0, 131082, 1507329, 0, 131082, 1507330, 0, 65547, 1507345, 0, 131072, 1507356, 0, 131080, 1507357, 0, 131082, 1507358, 0, 131082, 1507359, 0, 131082, 1507360, 0, 131082, 1507361, 3, 196616, 1507362, 3, 196619, 1507366, 0, 131080, 1507367, 0, 131082, 1507368, 0, 131082, 1507369, 0, 65547, 1638398, 0, 131080, 1638399, 0, 131082, 1572864, 0, 131082, 1572865, 0, 131082, 1572866, 0, 65542, 1572867, 8, 11, 1572868, 13, 1, 1572885, 10, 1, 1572886, 3, 8, 1572887, 3, 11, 1572892, 0, 131080, 1572893, 0, 131082, 1572894, 0, 131082, 1572895, 0, 131082, 1572896, 0, 131082, 1572897, 0, 131082, 1572898, 0, 65547, 1572902, 0, 131080, 1572903, 0, 131082, 1572904, 0, 131082, 1572905, 0, 65547, 1703934, 0, 131080, 1703935, 0, 131082, 1638400, 0, 131082, 1638401, 0, 131082, 1638402, 0, 131082, 1638403, 8, 65542, 1638404, 8, 11, 1638405, 13, 2, 1638406, 15, 1, 1638410, 13, 0, 1638412, 13, 1, 1638414, 13, 2, 1638415, 15, 1, 1638416, 14, 0, 1638417, 14, 65536, 1638418, 15, 0, 1638422, 3, 131080, 1638423, 3, 65547, 1638426, 7, 8, 1638427, 7, 9, 1638428, 0, 131080, 1638429, 0, 131082, 1638430, 0, 131082, 1638431, 0, 131082, 1638432, 0, 131082, 1638433, 0, 131082, 1638434, 0, 65547, 1638435, 7, 9, 1638436, 7, 9, 1638437, 7, 9, 1638438, 0, 131080, 1638439, 0, 131082, 1638440, 0, 131082, 1638441, 0, 65547, 1769470, 0, 131080, 1769471, 0, 131082, 1703936, 0, 131082, 1703937, 0, 131082, 1703938, 0, 131082, 1703939, 0, 131082, 1703940, 8, 65542, 1703941, 8, 11, 1703942, 7, 9, 1703943, 7, 9, 1703944, 7, 9, 1703945, 7, 9, 1703946, 7, 9, 1703947, 7, 9, 1703948, 7, 9, 1703949, 8, 8, 1703950, 8, 9, 1703951, 8, 9, 1703952, 8, 9, 1703953, 9, 9, 1703954, 9, 9, 1703955, 1, 9, 1703956, 1, 9, 1703957, 9, 9, 1703958, 3, 131080, 1703959, 3, 65547, 1703960, 7, 9, 1703961, 7, 9, 1703962, 7, 65541, 1703963, 7, 131082, 1703964, 0, 131080, 1703965, 0, 131082, 1703966, 0, 131082, 1703967, 0, 131082, 1703968, 0, 131082, 1703969, 0, 131082, 1703970, 0, 65542, 1703971, 0, 9, 1703972, 0, 9, 1703973, 0, 9, 1703974, 0, 65541, 1703975, 0, 131082, 1703976, 0, 131082, 1703977, 0, 65547, 1835006, 0, 131080, 1835007, 0, 131082, 1769472, 0, 131082, 1769473, 0, 131082, 1769474, 0, 131082, 1769475, 0, 131082, 1769476, 0, 131082, 1769477, 0, 65542, 1769478, 0, 11, 1769479, 7, 131082, 1769480, 7, 131082, 1769481, 7, 131082, 1769482, 7, 131082, 1769483, 7, 131082, 1769484, 0, 8, 1769485, 0, 65541, 1769486, 0, 131082, 1769487, 0, 131082, 1769488, 0, 131082, 1769489, 0, 131082, 1769490, 0, 131082, 1769491, 0, 131082, 1769492, 0, 131082, 1769493, 0, 131082, 1769494, 3, 131080, 1769495, 3, 65547, 1769496, 0, 9, 1769497, 0, 9, 1769498, 0, 9, 1769499, 0, 9, 1769500, 0, 65541, 1769501, 0, 131082, 1769502, 0, 131082, 1769503, 0, 131082, 1769504, 0, 131082, 1769505, 0, 131082, 1769506, 0, 131082, 1769507, 0, 131082, 1769508, 0, 131082, 1769509, 0, 131082, 1769510, 0, 131082, 1769511, 0, 131082, 1769512, 0, 131082, 1769513, 0, 65547, 1900542, 0, 131080, 1900543, 0, 131082, 1835008, 0, 131082, 1835009, 0, 131082, 1835010, 0, 131082, 1835011, 0, 131082, 1835012, 0, 131082, 1835013, 0, 131082, 1835014, 0, 65542, 1835015, 0, 9, 1835016, 0, 9, 1835017, 0, 9, 1835018, 0, 9, 1835019, 0, 9, 1835020, 0, 65541, 1835021, 0, 131082, 1835022, 0, 131082, 1835023, 0, 131082, 1835024, 0, 131082, 1835025, 0, 131082, 1835026, 0, 131082, 1835027, 0, 131082, 1835028, 0, 131082, 1835029, 0, 131082, 1835030, 3, 131080, 1835031, 3, 65547, 1835032, 0, 131082, 1835033, 0, 131082, 1835034, 0, 131082, 1835035, 0, 131082, 1835036, 0, 131082, 1835037, 0, 131082, 1835038, 0, 131082, 1835039, 0, 131082, 1835040, 0, 131082, 1835041, 0, 131082, 1835042, 0, 131082, 1835043, 0, 131082, 1835044, 0, 131082, 1835045, 0, 131082, 1835046, 0, 131082, 1835047, 0, 131082, 1835048, 0, 131082, 1835049, 0, 65547, 1966078, 0, 196616, 1966079, 0, 196618, 1900544, 0, 196618, 1900545, 0, 196618, 1900546, 0, 196618, 1900547, 0, 196618, 1900548, 0, 196618, 1900549, 0, 196618, 1900550, 0, 196618, 1900551, 0, 196618, 1900552, 0, 196618, 1900553, 0, 196618, 1900554, 0, 196618, 1900555, 0, 196618, 1900556, 0, 196618, 1900557, 0, 196618, 1900558, 0, 196618, 1900559, 0, 196618, 1900560, 0, 196618, 1900561, 0, 196618, 1900562, 0, 196618, 1900563, 0, 196618, 1900564, 0, 196618, 1900565, 0, 196618, 1900566, 3, 196616, 1900567, 3, 196619, 1900568, 0, 196618, 1900569, 0, 196618, 1900570, 0, 196618, 1900571, 0, 196618, 1900572, 0, 196618, 1900573, 0, 196618, 1900574, 0, 196618, 1900575, 0, 196618, 1900576, 0, 196618, 1900577, 0, 196618, 1900578, 0, 196618, 1900579, 0, 196618, 1900580, 0, 196618, 1900581, 0, 196618, 1900582, 0, 196618, 1900583, 0, 196618, 1900584, 0, 196618, 1900585, 0, 196619 )
__meta__ = {
"_edit_lock_": true
}

[node name="OverlayTileMap" type="TileMap" parent="Tilemaps"]
tile_set = ExtResource( 11 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 0
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SpikesTileMap" type="TileMap" parent="Tilemaps"]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 1572899, 0, 0, 1572900, 0, 0, 1572901, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Objects" type="Node2D" parent="."]

[node name="End" parent="Objects" instance=ExtResource( 3 )]
position = Vector2( 144, 162 )

[node name="Checkpoint" parent="Objects" instance=ExtResource( 5 )]
position = Vector2( 536, 328 )

[node name="ControlsUI" parent="." instance=ExtResource( 4 )]
visible = false

[node name="StartPoint" type="Position2D" parent="."]
position = Vector2( 112, 216 )
[connection signal="body_entered" from="Triggers/ShowHandTutorial" to="." method="_on_ShowHandTutorial_body_entered"]
[connection signal="body_entered" from="Triggers/RetrieveHandTutorial" to="." method="_on_RetrieveHandTutorial_body_entered"]
[connection signal="checkpoint" from="Player" to="." method="_on_Player_checkpoint"]
[connection signal="die" from="Player" to="." method="_on_Player_die"]
[connection signal="respawn" from="Player" to="." method="_on_Player_respawn"]
[connection signal="win" from="Player" to="." method="_on_Player_win"]
[connection signal="control_placed" from="ControlsUI" to="Player" method="_on_ControlsUI_control_placed"]
[connection signal="control_retrieved" from="ControlsUI" to="Player" method="_on_ControlsUI_control_retrieved"]
